# Marvin

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CI_CD_IMPLEMENTATION.md  RELEASE_PROCESS.md  SEED_IMPROVEMENTS.md  SEMANTIC_VERSIONING_SETUP.md  TESTING_SUMMARY.md  Taskfile.yml  package-lock.json  package.json  pyproject.toml  verify_configuration.py
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: NO_SECRETS_REQUIRED.md  QUICKSTART.md  SECRETS.md  WORKFLOWS.md
.github/workflows/: cli.yml  codeql.yml  docker.yml  docs.yml  helm.yml  pr-ci.yml  publish-release.yml  release.yml  sdk.yml  test.yml  workspace.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2024-07-22-05.30.52_7d218f3005e9_initial_table.py  2025-05-11-21.28.01_096bd305c0d2_initialize_tables.py
apps/cli/marvin-cli/: .env.example  .gitignore  .npmignore  README.md  TEST_RESULTS.md  package-lock.json  package.json
dev/code_generation/: gen_docs_api.py
dev/code_generation/utils/: template.py
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entry.sh  start.sh
docker/ldap/: users.ldif
docker/wiremock/mappings/: oauth-token.json  oauth-validate-invalid.json  oauth-validate.json
docs/: AI-ARCHITECTURE-PLAN.md  ARCHITECTURE-REVIEW.md  CLI-SCHEDULED-TASKS.md  CONFIGURATION-UPGRADE.md  CURRENT_STATUS.md  DEPLOYMENT_IMPLEMENTATION_COMPLETE.md  ENTRY_TYPE.md  ENTRY_TYPE_FIELD_SCHEMAS.json  EXAMPLE_ALL_FIELDS_SCHEMA.json  FRONTEND-API-AUDIT.md  FRONTEND_SDK_MIGRATION.md  FRONTEND_SDK_MIGRATION_STATUS.md  FUTURE-IMPROVEMENTS.md  HELM_DEPLOYMENT_GUIDE.md  IDEAS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS_DESIGN.md  INTEGRATIONS_PLUGIN_ARCHITECTURE.md  MARVIN_ROADMAP.md  MASH-AND-BURN-SEED.md  OPENSHIFT_DEPLOYMENT.md  PHASE-6-COMPLETE.md  PHASE-7-TECH-DEBT-FIXES.md  PHASE_5_FRONTEND_STATUS.md  PUBLISHING-API-COMPLETE.md  PUBLISHING-API-IMPLEMENTATION.md  RENDERER-ARCHITECTURE.md  ROLLBACK_PROCEDURES.md  SCHEDULED-TASKS-IMPLEMENTATION-COMPLETE.md  SDK-ARCHITECTURE-PLAN.md  SDK-SCHEDULED-TASKS.md  SPRINT-COMPLETE.md  WORKFLOW_STATE_REVIEW.md  WORKFLOW_SUGGESTIONS.md  admin-model.md  ai-intake-future.md  api-token-security-settings.md  astro-integration.md  configuration-settings.md  data-model.md  (+9 more)
docs/docs/: index.md
docs/docs/overrides/: api.html
frontend/: .env.example  AUTH_USAGE.md  MIGRATION_CHECKLIST.md  README.md  astro.config.mjs  biome.json  package-lock.json  package.json  tsconfig.json
frontend/docs/: smart-collections.md
frontend/src/: env.d.ts  middleware.ts
frontend/src/components/: Breadcrumb.astro  EmojiPicker.astro  EntryCard.astro  FilterBar.astro  FormShell.astro  ImageCropper.astro  Marvin.astro  RuntimeConfig.astro  SchemaEditor.astro  SchemaForm.astro  SlugInput.astro  SmartCollectionFields.astro  SuggestionBanner.astro  TagChips.astro  TagList.astro  ThemeSwitcher.astro  WorkspaceSwitcher.astro
frontend/src/layouts/: AdminLayout.astro  AppLayout.astro
frontend/src/lib/: auth.ts  client-auth.ts  schemaFields.ts  sdk.ts  utils.ts
frontend/src/pages/: assets.astro  collections.astro  entries.astro  entry-types.astro  forgot-password.astro  forgot.astro  index.astro  login.astro  register.astro  resources.astro  site-clients.astro  workspaces.astro
frontend/src/styles/: global.css
marvin/: app.py  main.py
marvin-chart/: Chart.yaml  README.md  values-production.yaml  values-staging.yaml  values.yaml
marvin-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  migration-job.yaml  poddisruptionbudget.yaml  pvc.yaml  route.yaml  secret.yaml  service.yaml  serviceaccount.yaml
marvin/clients/: __init__.py  marvin_client.py
marvin/clients/_marvin/: __init__.py  marvin_client.py
marvin/core/: config.py  display.py  exceptions.py  release_checker.py  root_logger.py
marvin/core/dependencies/: dependencies.py
marvin/core/logger/: config.py  logconf.dev.json  logconf.prod.json
marvin/core/security/: hasher.py  security.py
marvin/core/settings/: __init__.py  db_providers.py  directories.py  display.py  plugins.py  settings.py  static.py
marvin/db/: db_setup.py  init_db.py  migration_types.py
marvin/db/fixes/: fix_migration_data.py
marvin/db/models/: _model_base.py
marvin/pkgs/stats/: fs_stats.py
marvin/repos/: __init__.py  _utils.py  all_repositories.py  groups.py  repository_factory.py  repository_generic.py  users.py
marvin/routes/: __init__.py  handlers.py
marvin/schemas/: mapper.py
marvin/services/: __init__.py
plugins/: __init__.py
plugins/marvin_test/: project_routes.py
scripts/: README.md  seed_mashandburnco.py  seed_notifier_options.py  server.py  test_event_consumer.py  test_events_direct.py  test_invitations.sh  test_invitations_cli.sh  test_invitations_e2e.mjs  test_workspace_member_role.mjs
src/marvin/: __init__.py  alembic.ini  app.py  main.py
tasks/: ai-architecture-plan-updates.md  enrichment-automations-thread.md  lessons.md  marvin-assistant-architecture.md  media-enrichment-capability-routing.md  todo.md
tests/: conftest.py  test_agent_context.py  test_agent_loop.py  test_ai_embedding_reaction.py  test_asset_derivation.py  test_asset_resource_tags.py  test_auth.py  test_authoring_service.py  test_automation_flavor_b.py  test_budget_max_tokens.py  test_bulk_tag_tool.py  test_embeddings_content_gate.py  test_entry_service.py  test_entry_service_collections.py  test_entry_service_links.py  test_entry_service_resources.py  test_entry_service_suggested_assets.py  test_event_catalog.py  test_frontend_port_setting.py  test_group_purge.py  test_integration_registry.py  test_invocation_source_gate.py  test_logging_policy.py  test_operation_prompts.py  test_provider_tool_calling.py  test_publishing.py  test_resolve_entity_id.py  test_scheduler_leader.py  test_secrets_vault.py  test_security.py  test_smart_collections.py  test_system_collections.py  test_tags_repository.py  test_tool_registry.py  test_user_summary_schema.py  test_validation.py  test_workspace_tags_backup.py  test_writeback.py
(+788 files in other folders)
