[project]
name = "marvin"
version = "0.1.0"
description = "Marvin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.2",
    "apprise>=1.9.3",
    "authlib>=1.5.2",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "go-task-bin>=3.43.3",
    "html2text>=2025.4.15",
    "humps>=0.2.2",
    "isodate>=0.7.2",
    "jinja2>=3.1.6",
    "mangum>=0.19.0",
    "marvin-test",
    "mcp[cli]>=1.7.1",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1",
    "pyhumps>=3.8.0",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-slugify>=8.0.4",
    "rich>=14.0.0",
    "ruff>=0.11.7",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-ext>=0.2",
    "sqlalchemy-orm>=1.2.10",
    "starlette>=0.46.2",
    "sync>=1.0.0",
    "text-unidecode>=1.3",
    "unicode>=2.9",
    "uvicorn>=0.34.2",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "freezegun>=1.5.1",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.0.0",
    "ruff>=0.11.7",
    "types-pyyaml>=6.0.12.20250402",
]
postgres = [
    "postgres>=4.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
minversion = "6.0"
python_classes = '*Tests'
python_files = 'test_*'
python_functions = 'test_*'
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
plugins = "pydantic.mypy"
python_version = "3.10"
strict_optional = true

[tool.ruff]
line-length = 120
output-format = "concise"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
ignore = ["F403", "TID252", "B008"]
select = [
  "E",  # pycodestyles
  "F",  # pyflakes
  "I",  # isort
  "T",  # flake8-print
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  # "ANN", # flake8-annotations
  # "C", # McCabe complexity
  # "RUF", # Ruff specific
  # "BLE", # blind-except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "E501"]
"ldap_provider.py" = ["UP032"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.uv.workspace]
members = [
    "plugins/marvin_test",
    "plugins/marvin_tests",
    "dev/plugins/Marvin_Test",
]

[tool.uv.sources]
marvin-test = { workspace = true }
