[project]
name = "marvin"
version = "1.0.0-rc.6"
description = "Marvin"
readme = "README.md"

requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.15.2",
    "apprise>=1.9.3",
    "authlib>=1.5.2",
    "bcrypt>=4.3.0",
    "boto3>=1.35.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.115.12",
    "go-task-bin>=3.43.3",
    "html2text>=2025.4.15",
    "isodate>=0.7.2",
    "jinja2>=3.1.6",
    "mangum>=0.19.0",
    "mcp[cli]>=1.28.1",
    "numpy>=2.2.6",
    "openai>=2.46.0",
    "pillow>=11.1.0",
    "pre-commit>=4.2.0",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.9.1",
    "pyhumps>=3.8.0",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-slugify>=8.0.4",
    "rich>=14.0.0",
    "ruff>=0.11.7",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-ext>=0.2",
    "sqlalchemy-orm>=1.2.10",
    "starlette>=0.46.2",
    "text-unidecode>=1.3",
    "types-python-dateutil>=2.9.0.20250516",
    "types-requests>=2.32.0.20250515",
    "unicode>=2.9",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
# AI provider SDKs — install only the providers you use, e.g. `uv sync --extra openai`
# or `pip install 'marvin[openai]'`. Providers lazy-import these, so an undeclared SDK only
# fails when that provider is actually selected. See docs/AI-ARCHITECTURE-PLAN.md §6.
openai = ["openai>=1.50.0"]          # also powers the Azure OpenAI provider
anthropic = ["anthropic>=0.40.0"]
google = ["google-generativeai>=0.8.0"]
ollama = ["httpx>=0.27.0"]
all-ai = [
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
marvin-server = "marvin.app:main"
#healthz = "marvin.scripts.healthcheck"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "freezegun>=1.5.1",
    # "materialx>=1.39.3",  # Disabled: CMake build fails with version 4.3.4
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mypy>=1.15.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-semantic-release>=9.17.0",
    "rich>=14.0.0",
    "ruff>=0.11.7",
    "types-pyyaml>=6.0.12.20250402",
]
# Optional LDAP auth. Needs system libs to build the C extension (libldap2-dev, libsasl2-dev)
# and is only imported when LDAP auth is enabled. Opt in with `uv sync --group ldap`.
ldap = ["python-ldap>=3.4.5"]
# Optional PostgreSQL driver. SQLAlchemy's bare `postgresql://` dialect uses psycopg2;
# the binary wheel needs no build step. Opt in with `uv sync --group postgres`.
postgres = ["psycopg2-binary>=2.9"]
# Optional HashiCorp Vault secret backend (SECRET_BACKEND=vault). Opt in with `uv sync --group vault`.
vault = ["hvac>=2.0"]
# Optional Bitwarden Secrets Manager backend (SECRET_BACKEND=bitwarden). Opt in with `uv sync --group bitwarden`.
bitwarden = ["bitwarden-sdk>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_default_fixture_loop_scope = "function"
minversion = "6.0"
python_classes = 'Test*'
python_files = 'test_*'
python_functions = 'test_*'
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
plugins = "pydantic.mypy"
python_version = "3.12"
strict_optional = true

[tool.ruff]
line-length = 150
indent-width = 4
output-format = "concise"

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.lint.isort]
known-third-party = ["alembic"]

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
ignore = ["F403", "TID252", "B008"]
select = [
  "B",  # flake8-bugbear
  "C4", # McCabe complexity
  "C90", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "E",  # pycodestyles
  "F",  # pyflakes
  "I",  # isort
  "T",  # flake8-print
  "UP", # pyupgrade
  # "ANN", # flake8-annotations
  # "BLE", # blind-except
  # "RUF", # Ruff specific
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "E501"]
"src/marvin/alembic/versions/*" = ["E501", "I001"]
"ldap_provider.py" = ["UP032"]
"tests/conftest.py" = ["E402"]
"tests/utils/routes/__init__.py" = ["F401"]
# Standalone CLI utilities: writing to stdout is their output, not a debug leftover, and
# imports necessarily follow the sys.path.insert that makes `marvin` importable at all (E402).
"scripts/*" = ["T201", "E402", "E501"]
"verify_configuration.py" = ["T201"]
"src/dev/code_generation/*" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 24  # Default is 10.

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/marvin/__init__.py:__version__"]
branch = "main"
build_command = "pip install -e ."
# Only {version} is substituted here — semantic-release formats this with version= alone, so any
# other placeholder (e.g. {changelog}) raises KeyError and fails the release at commit time, after
# the version bump and build have already succeeded. The changelog lives in CHANGELOG.md.
commit_message = "chore(release): {version} [skip ci]"
tag_format = "v{version}"
upload_to_pypi = false
upload_to_vcs_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop"
prerelease = true
# Must be a PEP 440 pre-release marker — only "a", "b" and "rc" are legal. This yields
# 1.0.0-rc.1, which normalizes to 1.0.0rc1. A token like "next" produces 1.0.0-next.1, which
# hatchling rejects when semantic-release runs its build_command (`pip install -e .`) — failing
# the release after the new version has already been written to pyproject.toml.
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
